// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppLayout renders <AppLayout /> with children 1`] = `
<div
  className="app-layout"
>
  <HeaderNav />
  <div>
    Child 1
  </div>
  <div>
    <div>
      Child 2
    </div>
    <span>
      Child 3
    </span>
  </div>
</div>
`;

exports[`AppLayout renders <AppLayout /> with one child 1`] = `
<div
  className="app-layout"
>
  <HeaderNav />
  <div>
    Child 1
  </div>
</div>
`;

exports[`AppLayout renders empty <AppLayout /> 1`] = `
<div
  className="app-layout"
>
  <HeaderNav />
</div>
`;
